Final backup before new site

--- a/about.html
+++ b/about.html
@@ -11,6 +11,18 @@
     <meta name="description" content="I am a graphic designer and web developer in the Baton Rouge/New Orleans area. I specialize in publication design and web sites for small businesses.">
     <meta name="author" content="Ryann Green">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <!-- Hotjar Tracking Code for www.ryanngreen.com -->
+	<script>
+	    (function(h,o,t,j,a,r){
+	        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+	        h._hjSettings={hjid:103122,hjsv:5};
+	        a=o.getElementsByTagName('head')[0];
+	        r=o.createElement('script');r.async=1;
+	        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+	        a.appendChild(r);
+	    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+	</script>
+
   </head>
   
   <body>
